--- a/Sales_Analytics.ipynb
+++ b/Sales_Analytics.ipynb
@@ -2220,9 +2220,181 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SKU_NAME</th>\n",
+       "      <th>FEED_DATE</th>\n",
+       "      <th>CATEGORY</th>\n",
+       "      <th>SUB_CATEGORY</th>\n",
+       "      <th>ORDERED_REVENUE</th>\n",
+       "      <th>ORDERED_UNITS</th>\n",
+       "      <th>REP_OOS</th>\n",
+       "      <th>VIEWS</th>\n",
+       "      <th>YEAR</th>\n",
+       "      <th>MONTH</th>\n",
+       "      <th>DAY</th>\n",
+       "      <th>WEEKDAY</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>B12020KBUI</td>\n",
+       "      <td>2019-05-18</td>\n",
+       "      <td>1000 Inputs</td>\n",
+       "      <td>1002 Mice</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>5</td>\n",
+       "      <td>18</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>B12020KBUI</td>\n",
+       "      <td>2019-05-19</td>\n",
+       "      <td>1000 Inputs</td>\n",
+       "      <td>1002 Mice</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>5</td>\n",
+       "      <td>19</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>B12020KBUI</td>\n",
+       "      <td>2019-05-22</td>\n",
+       "      <td>1000 Inputs</td>\n",
+       "      <td>1002 Mice</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>5</td>\n",
+       "      <td>22</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>B12020KBUI</td>\n",
+       "      <td>2019-05-23</td>\n",
+       "      <td>1000 Inputs</td>\n",
+       "      <td>1002 Mice</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>5</td>\n",
+       "      <td>23</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>B12020KBUI</td>\n",
+       "      <td>2019-05-27</td>\n",
+       "      <td>1000 Inputs</td>\n",
+       "      <td>1002 Mice</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>5</td>\n",
+       "      <td>27</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     SKU_NAME  FEED_DATE     CATEGORY SUB_CATEGORY  ORDERED_REVENUE  \\\n",
+       "0  B12020KBUI 2019-05-18  1000 Inputs    1002 Mice              0.0   \n",
+       "1  B12020KBUI 2019-05-19  1000 Inputs    1002 Mice              0.0   \n",
+       "2  B12020KBUI 2019-05-22  1000 Inputs    1002 Mice              0.0   \n",
+       "3  B12020KBUI 2019-05-23  1000 Inputs    1002 Mice              0.0   \n",
+       "4  B12020KBUI 2019-05-27  1000 Inputs    1002 Mice              0.0   \n",
+       "\n",
+       "   ORDERED_UNITS  REP_OOS  VIEWS  YEAR  MONTH  DAY  WEEKDAY  \n",
+       "0              0      0.0      8  2019      5   18        5  \n",
+       "1              0      0.0      5  2019      5   19        6  \n",
+       "2              0      0.0      8  2019      5   22        2  \n",
+       "3              0      0.0      4  2019      5   23        3  \n",
+       "4              0      0.0      9  2019      5   27        0  "
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Most expensive SKU: C03CBL[721 \n",
+      "Average price: 1151.8587273143523\n"
+     ]
+    }
+   ],
+   "source": [
+    "merged_data['PRICE'] = merged_data.apply(\n",
+    "    lambda row: row['ORDERED_REVENUE'] / row['ORDERED_UNITS'] if row['ORDERED_UNITS'] > 0 else None, axis=1\n",
+    ")\n",
+    "\n",
+    "# Compute the average price for each SKU across the dataset\n",
+    "average_price_by_sku = merged_data.groupby('SKU_NAME')['PRICE'].mean()\n",
+    "\n",
+    "# Identify the most expensive SKU and its average price\n",
+    "most_expensive_sku = average_price_by_sku.idxmax()\n",
+    "max_average_price = average_price_by_sku.max()\n",
+    "\n",
+    "print('Most expensive SKU:', most_expensive_sku, '\\nAverage price:', max_average_price)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
