Added 2nd question

--- a/Sales_Analytics.ipynb
+++ b/Sales_Analytics.ipynb
@@ -2429,10 +2429,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percentage of SKUs generating revenue: 80.97%\n"
+     ]
+    }
+   ],
+   "source": [
+    "sku_revenue = merged_data.groupby('SKU_NAME')['ORDERED_REVENUE'].sum()\n",
+    "revenue_generating_skus = sku_revenue[sku_revenue > 0].index\n",
+    "total_skus = merged_data['SKU_NAME'].nunique()\n",
+    "percentage_revenue_generating = (len(revenue_generating_skus) / total_skus) * 100\n",
+    "\n",
+    "print(f\"Percentage of SKUs generating revenue: {percentage_revenue_generating:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'B09FIZS5TZ',\n",
+       " 'B10LJIXFL0',\n",
+       " 'C02228YPPT',\n",
+       " 'C07S8PDLZX',\n",
+       " 'C12GZK3L49',\n",
+       " 'C17NEDU7P[',\n",
+       " 'C19T:CGV3L',\n",
+       " 'C28S6S9HS[',\n",
+       " 'C29LCOGDHZ',\n",
+       " 'D278[PCGZN',\n",
+       " 'D27IO46C5P'}"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "skus_selling_after_july = merged_data[merged_data['MONTH'] > 7]['SKU_NAME'].unique()\n",
+    "skus_stopped_selling = set(revenue_generating_skus) - set(skus_selling_after_july)\n",
+    "\n",
+    "skus_stopped_selling"
+   ]
   }
  ],
  "metadata": {
