Added summary to the case study 1

--- a/Sales_Analytics/Sales_Analytics.ipynb
+++ b/Sales_Analytics/Sales_Analytics.ipynb
@@ -3144,26 +3144,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\mohit\\AppData\\Local\\Temp\\ipykernel_36016\\3486845960.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\mohit\\AppData\\Local\\Temp\\ipykernel_35868\\3486845960.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  sku_data['UNITS_CONVERTED'] = sku_data['ORDERED_UNITS'] / sku_data['VIEWS']\n",
-      "C:\\Users\\mohit\\AppData\\Local\\Temp\\ipykernel_36016\\3486845960.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\mohit\\AppData\\Local\\Temp\\ipykernel_35868\\3486845960.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  sku_data['AVG_SP']=sku_data['ORDERED_REVENUE']/sku_data['ORDERED_UNITS']\n",
-      "C:\\Users\\mohit\\AppData\\Local\\Temp\\ipykernel_36016\\3486845960.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\mohit\\AppData\\Local\\Temp\\ipykernel_35868\\3486845960.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -3456,7 +3456,7 @@
        "[123 rows x 15 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3472,7 +3472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -3498,7 +3498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -3507,7 +3507,7 @@
        "-0.029776602675128886"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3519,7 +3519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -3528,7 +3528,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3553,6 +3553,63 @@
    "source": [
     "No correlation between Average Selling Price and Unit Conversion"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Summary**\n",
+    "- General Metrics:\n",
+    "    - Revenue: Ranges from anomalies (negative values) to a maximum of $1,121,838.\n",
+    "    - Units Sold: Includes negative values; these need further review.\n",
+    "    - Views: Average of 856 per SKU, with a maximum of 176,162 views.\n",
+    "    - SKU_NAME: 452 unique SKUs; most frequent appears 123 times.\n",
+    "    - CATEGORY: Most common is \"1000 Inputs\" with over 26,000 records.\n",
+    "    - SUB_CATEGORY: Top subcategory is \"1002 Mice,\" followed by Keyboards and Media Speaker Systems.\n",
+    "Insights by Analysis:\n",
+    "- Top SKUs by Units Sold and Revenue:\n",
+    "\n",
+    "    - High-performing SKUs are likely ideal candidates for targeted marketing.\n",
+    "    - Premium offerings show high revenue despite low units sold.\n",
+    "- Revenue Trends Over Time:\n",
+    "\n",
+    "    - Peaks in July indicate a likely sales event, confirmed between July 15-31, 2019.\n",
+    "- Views vs Units Sold:\n",
+    "\n",
+    "    - Positive correlation: Higher views often translate to higher sales.\n",
+    "    - Exceptions highlight potential issues like pricing mismatches or availability problems.\n",
+    "- Slowest-Growing Subcategories:\n",
+    "\n",
+    "    - Categories like \"0460 Mice - DELETED\" and \"1008 Computer Peripherals Other\" show zero relative growth, indicating areas of concern.\n",
+    "- Out-of-Stock Impact:\n",
+    "\n",
+    "    - Negative correlation between out-of-stock events and revenue indicates inventory issues.\n",
+    "\n",
+    "- Correlations:\n",
+    "    -  Strong Correlations: \n",
+    "        - Ordered Units and Ordered Revenue\n",
+    "        - Views and Revenue\n",
+    "    - Weak Correlations:\n",
+    "        - REP_OOS and sales metrics like revenue and views.\n",
+    "\n",
+    "- SKU-Level Insights:\n",
+    "    - Most Expensive SKU: C03CBL[721 with an average price of $1151.86.\n",
+    "    - Revenue-Generating SKUs: 80.97% of SKUs contributed revenue.\n",
+    "    - SKUs Stopped Selling After July: Identified SKUs, such as C17NEDU7P[, showed complete inactivity.\n",
+    "- Anomalies:\n",
+    "    - Negative Values: Found in revenue and units sold, indicating potential data quality issues.\n",
+    "    - Missing Values: 689 missing values in REP_OOS likely imply no out-of-stock events.\n",
+    "    - Duplicate Rows: Investigate to ensure data consistency.\n",
+    "- Other Observations:\n",
+    "    - No Correlation was found between average selling price and unit conversion for SKU C120[H:8NV.\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
