--- a/Marketing_Analytics/Marketing_Analysis.ipynb
+++ b/Marketing_Analytics/Marketing_Analysis.ipynb
@@ -1813,6 +1813,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- The customers with score > 4.5 => Top Customers\n",
+    "- The customers with score > 4 => High Value Customers\n",
+    "- The customers with score > 3 => Medium Value Customers\n",
+    "- The customers with score >1.6 => Low Value Customers"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
