--- a/Sales_Analytics/Sales_Analytics.ipynb
+++ b/Sales_Analytics/Sales_Analytics.ipynb
@@ -2535,7 +2535,7 @@
     "- On 15-Jul-2019 to 31-Jul-2019, Sale Event happened as there was a highest peak in sale over the time.\n",
     "---\n",
     "\n",
-    "## 4. "
+    "## **4. Does having a sale event cannibalize sales in the immediate aftermath? Highlighting a few examples would suffice (brownie points - determine a statistical metric to prove/disprove this).** \n"
    ]
   },
   {
@@ -2614,7 +2614,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## **4. In each category, find the subcategory that has grown slowest relative to the category it is present in. If you were handling the entire portfolio, which of these subcategories would you be most concerned with?**\n"
+    "## **5. In each category, find the subcategory that has grown slowest relative to the category it is present in. If you were handling the entire portfolio, which of these subcategories would you be most concerned with?**\n"
    ]
   },
   {
@@ -2811,7 +2811,7 @@
    "source": [
     "These are the slowest moving subcategories when compared to relative growth in the categories\n",
     "---\n",
-    "## **5. Highlight any anomalies/mismatches in the data that you see, if any. (In terms of data quality issues)**\n",
+    "## **6. Highlight any anomalies/mismatches in the data that you see, if any. (In terms of data quality issues)**\n",
     "\n",
     "- There are some negative values in the units sold\n",
     "- Compare SKUs in sales_data and glance_views to find mismatches"
@@ -3139,7 +3139,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## **6. For SKU Name C120[H:8NV, discuss whether Unit Conversion (Units/Views) is affected by Average Selling Price**"
+    "## **7. For SKU Name C120[H:8NV, discuss whether Unit Conversion (Units/Views) is affected by Average Selling Price**"
    ]
   },
   {
